--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/server.ts"
+    "dev": "ts-node-dev  --ignore-watch node_modules src/server.ts",
+    "knex:migrate": " knex  --knexfile knexfile.ts migrate:latest",
+    "knex:seed": " knex  --knexfile knexfile.ts seed:run"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -14,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.51",
     "typescript": "^3.9.6"
   }
 }
