--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "knex:seed": " knex  --knexfile knexfile.ts seed:run"
   },
   "dependencies": {
+    "@types/multer": "^1.4.3",
+    "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.2",
+    "multer": "^1.4.2",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
+    "@types/hapi__joi": "^17.1.4",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.51",
     "typescript": "^3.9.6"
