--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/multer": "^1.4.3",
     "celebrate": "^12.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.2",
     "multer": "^1.4.2",
