--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "dev": "ts-node-dev  --ignore-watch node_modules src/server.ts",
     "knex:migrate": " knex  --knexfile knexfile.ts migrate:latest",
     "knex:seed": " knex  --knexfile knexfile.ts seed:run"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@types/multer": "^1.4.3",
+    "D": "^1.0.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -19,9 +28,12 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/hapi__joi": "^17.1.4",
+    "babel-plugin-transform-typescript-metadata": "^0.3.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.51",
     "typescript": "^3.9.6"
